[gd_scene load_steps=8 format=2]

[ext_resource path="res://components/requirements_overlay/RequirementsOverlay.gd" type="Script" id=1]
[ext_resource path="res://assets/items/last_outpost_item_stone.png" type="Texture2D" id=2]
[ext_resource path="res://assets/items/last_outpost_item_wood.png" type="Texture2D" id=3]
[ext_resource path="res://assets/items/last_outpost_item_leaf.png" type="Texture2D" id=4]
[ext_resource path="res://assets/ui_theme/label_theme.tres" type="Theme" id=5]
[ext_resource path="res://assets/light/light.png" type="Texture2D" id=6]
[ext_resource path="res://components/requirements_overlay/last_outpost_upgrade_anforderung.png" type="Texture2D" id=7]

[node name="RequirementsOverlay" type="Node2D"]
light_mask = 131072
position = Vector2( -24, -64 )
script = ExtResource( 1 )

[node name="Graphic" type="Sprite2D" parent="."]
light_mask = 131072
position = Vector2( 24, 29 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Lines" type="HBoxContainer" parent="Graphic"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.0
offset_top = -23.0
offset_right = -25.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 98, 48 )
alignment = 1

[node name="WoodLine" type="VBoxContainer" parent="Graphic/Lines"]
offset_left = 2.0
offset_right = 47.0
offset_bottom = 53.0
theme_override_constants/separation = 0

[node name="WoodLabel" type="Label" parent="Graphic/Lines/WoodLine"]
offset_right = 45.0
offset_bottom = 21.0
theme = ExtResource( 5 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1

[node name="Control2" type="Control" parent="Graphic/Lines/WoodLine"]
offset_top = 21.0
offset_right = 45.0
offset_bottom = 49.0
custom_minimum_size = Vector2( 45, 28 )

[node name="Sprite2D" type="Sprite2D" parent="Graphic/Lines/WoodLine/Control2"]
light_mask = 131072
scale = Vector2( 0.0995671, 0.0995671 )
texture = ExtResource( 3 )
centered = false

[node name="StoneLine" type="VBoxContainer" parent="Graphic/Lines"]
offset_left = 51.0
offset_right = 96.0
offset_bottom = 53.0
theme_override_constants/separation = 0

[node name="StoneLabel" type="Label" parent="Graphic/Lines/StoneLine"]
offset_right = 45.0
offset_bottom = 21.0
theme = ExtResource( 5 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1

[node name="Control" type="Control" parent="Graphic/Lines/StoneLine"]
offset_top = 21.0
offset_right = 45.0
offset_bottom = 35.0
custom_minimum_size = Vector2( 45, 14 )

[node name="Sprite2D" type="Sprite2D" parent="Graphic/Lines/StoneLine/Control"]
light_mask = 131072
position = Vector2( 3, 0 )
scale = Vector2( 0.0888031, 0.0888031 )
texture = ExtResource( 2 )
centered = false

[node name="LeafLine" type="VBoxContainer" parent="Graphic/Lines"]
visible = false
offset_left = 98.0
offset_right = 143.0
offset_bottom = 53.0
theme_override_constants/separation = -2

[node name="LeafLabel" type="Label" parent="Graphic/Lines/LeafLine"]
offset_right = 45.0
offset_bottom = 21.0
theme = ExtResource( 5 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1

[node name="Control3" type="Control" parent="Graphic/Lines/LeafLine"]
offset_top = 19.0
offset_right = 45.0
offset_bottom = 33.0
custom_minimum_size = Vector2( 45, 14 )

[node name="Sprite2D" type="Sprite2D" parent="Graphic/Lines/LeafLine/Control3"]
light_mask = 131072
position = Vector2( 12, 0 )
scale = Vector2( 0.0888889, 0.0888889 )
texture = ExtResource( 4 )
centered = false

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = ExtResource( 6 )
mode = 2
range_item_cull_mask = 131072
